# cv_tracking

./: CMakeLists.txt  LICENSE  README.md  main.cpp
model/: clinic.cpp  clinic.h  config.h  person.h
models/: yolo-emotions.onnx
nn/: misc.cpp  misc.h  yolo_onnx.cpp  yolo_onnx.h
